add label for datetime

--- a/make-images.ipynb
+++ b/make-images.ipynb
@@ -16,22 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "id": "cf6cc023-ea39-46eb-885e-86a184dc1850",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13c9d3ebf8b54c168d8612b31cfa3636",
+       "model_id": "62bb78e1ce5949e5bf3a694815a8abde",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Dropdown(description='File:', options=('argentina-internal.osh.pbf',), value='argentina-interna…"
+       "VBox(children=(Dropdown(description='File:', options=(), value=None), Text(value='', description='BBox:', plac…"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,6 +61,11 @@
     "start_date = widgets.NaiveDatetimePicker(description='Start datetime')\n",
     "end_date = widgets.NaiveDatetimePicker(description='End datetime')\n",
     "\n",
+    "date_label= widgets.Label(\n",
+    "    value=\"You need to pick a time for the script to work, even if it's just 00:00\",\n",
+    "    layout=widgets.Layout(width='100%')\n",
+    ")\n",
+    "\n",
     "min_zoom_level = widgets.Dropdown(\n",
     "    options=range(0,21),\n",
     "    description='Min Zoom:',\n",
@@ -81,6 +86,7 @@
     "    bbox_label,\n",
     "    start_date,\n",
     "    end_date,\n",
+    "    date_label,\n",
     "    min_zoom_level,\n",
     "    max_zoom_level])"
    ]
@@ -95,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "d5932adf-763e-4a3a-8f96-9247cb90ecc2",
    "metadata": {},
    "outputs": [],
