start support 4 download files into container

--- a/make-images.ipynb
+++ b/make-images.ipynb
@@ -23,11 +23,113 @@
     "\n",
     "**The right file**: When you've picked your region, you will likely see two similarly named files listed: `regionname-internal.osh.pbf` and `regionname-latest-internal.osm.pbf`. The file you will want to download is the `regionname-internal.osh.pbf` (i.e. the one that includes `osh` and **no `latest`**).\n",
     "\n",
-    "Once you have downloaded your file onto your computer, you need to upload it into your container:\n",
+    "Once you have downloaded your file onto your computer, you need to upload it into your container. There are a few options that you can consider, depending on how you are using this notebook:\n",
+    "\n",
+    "#### Uploading a file you already have downloaded onto your computer\n",
     "\n",
     "* If you've launched this notebook in _MyBinder_, you can then open up the filebrowser on the top of the left hand side (The _file_ icon, or by pressing CTRL+SHIFT+F). \n",
-    "* If you've launched this notebook locally, you're likely in the _notebook_ interface, switch back to the _tree_ view and upload your file there (or put it into the shared folder which is accessible by both the container and your normal operating system).  \n",
+    "* If you've launched this notebook locally, you're likely in the _notebook_ interface, switch back to the _tree_ view and upload your file there (or put it into the shared folder which is accessible by both the container and your normal operating system).\n",
     "\n",
+    "#### Downloading a file directly from Geofabrik \n",
+    "\n",
+    "This option is particularly useful if you use this notebook on MyBinder, as it allows you to directly download the OSM history file into your Binder, without having to first download it onto your computer and then re-uploading it to the Binder, speeding things up considerably. As the OSM history files are only accessible with an OSM account, you will unfortunately have to fill out the form below, including your OSM username & password. \n",
+    "\n",
+    "**Note:** Your username & password will only be used to get a cookie that allows downloading the files and won't be permanently stored (and are not accessible to anyone else). If you are using _MyBinder_, your virtual machine will automatically shut down after more than 10 minutes of inactivity, destroying all data within the virtual machine in the process. If you are running this in a Docker container on your own computer the container will also destroy itself after shutting it down. \n",
+    "\n",
+    "If you decide to use the direct download from Geofabrik, enter the necessary details here: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7d8cfd4c-913e-4983-92ef-c40567421331",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "03b1bf2d3a5447b3823c3b4007441b86",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='', description='OSM username:', placeholder='Steve'), Text(value='', description='O…"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "\n",
+    "osm_user = widgets.Text(\n",
+    "    placeholder='Steve',\n",
+    "    description='OSM username:',\n",
+    "    disabled=False   \n",
+    ")\n",
+    "\n",
+    "osm_password = widgets.Text(\n",
+    "    placeholder='your password',\n",
+    "    description='OSM password:',\n",
+    "    disabled=False   \n",
+    ")\n",
+    "\n",
+    "file_url = widgets.Text(\n",
+    "    placeholder='https://osm-internal.download.geofabrik.de/south-america/argentina-internal.osh.pbf',\n",
+    "    description='Link to OSM history file:',\n",
+    "    disabled=False   \n",
+    ")\n",
+    "widgets.VBox([\n",
+    "    osm_user,\n",
+    "    osm_password,\n",
+    "    file_url\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15b753ea-4489-4620-9c19-e46e59f0afeb",
+   "metadata": {},
+   "source": [
+    "Once you have added the details above, you can download your file by running the cell below this one:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "582dbd2b-bd06-4dcf-934a-112c1de79fbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2024-12-20 21:19:10--  https://osm-internal.download.geofabrik.de/south-america/uruguay-internal.osh.pbf\n",
+      "Resolving osm-internal.download.geofabrik.de (osm-internal.download.geofabrik.de)... 65.109.22.172, 2a01:4f9:5a:1426::2\n",
+      "connected. to osm-internal.download.geofabrik.de (osm-internal.download.geofabrik.de)|65.109.22.172|:443... \n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 87939811 (84M) [application/octet-stream]\n",
+      "Saving to: ‘uruguay-internal.osh.pbf’\n",
+      "\n",
+      "uruguay-internal.os 100%[===================>]  83.87M   190KB/s    in 3m 3s   \n",
+      "\n",
+      "2024-12-20 21:22:15 (468 KB/s) - ‘uruguay-internal.osh.pbf’ saved [87939811/87939811]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python sendfile_osm_oauth_protector/oauth_cookie_client.py -u \"{osm_user.value}\" -p \"{osm_password.value}\" -c \"https://osm-internal.download.geofabrik.de/get_cookie\" -f netscape -o geofabrik_cookie.txt;wget --max-redirect 0 --load-cookies geofabrik_cookie.txt {file_url.value}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfe0b5b8-cebd-4975-8447-f2189459dbcb",
+   "metadata": {},
+   "source": [
+    "Once the file is completely downloaded (or if you uploaded the file using one of the other methods), you can continue with the next step below. \n",
     "\n",
     "## Starting to make the comparison images. \n",
     "\n",
@@ -38,22 +140,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "cf6cc023-ea39-46eb-885e-86a184dc1850",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "405e31685af24471838cd6587a52f032",
+       "model_id": "9637ee17e1b040d5857c2d36553015f8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Dropdown(description='File:', options=('external/argentina-internal.osh.pbf', 'external/argenti…"
+       "VBox(children=(Dropdown(description='File:', options=('testfile.osh.pbf', 'uruguay-internal.osh.pbf', 'argenti…"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +165,7 @@
     "import glob\n",
     "\n",
     "filename = widgets.Dropdown(\n",
-    "    options=glob.glob(\"*/*.pbf\"),\n",
+    "    options=glob.glob(\"**/*.pbf\",recursive=True),\n",
     "    description='File:',\n",
     "    disabled=False,\n",
     ")\n",
