--- a/make-images.ipynb
+++ b/make-images.ipynb
@@ -150,10 +150,10 @@
     "To use this option, do the following: \n",
     "\n",
     "1. Head to the [OSM internal Geofabrik download page](https://osm-internal.download.geofabrik.de/)\n",
-    "2. Log-in on that page with your existing OSM credentials, this will create the necessary cookie. \n",
-    "3. Find the cookie in your web-browser: If you're using Firefox, press `F12` on your keyboard to open the web developer tools\n",
+    "2. Log in on that page with your existing OSM credentials, this will create the necessary cookie. \n",
+    "3. Find the cookie in your web browser: If you're using Firefox, press `F12` on your keyboard to open the web developer tools\n",
     "4. Go to the tab called `Storage` in the bar that opens at the bottom of your browser\n",
-    "5. On the bottom-left, you will see `Cookies`, click on it and select the cookie that starts with `https://osm-internal.download.geofabrik.de`.\n",
+    "5. On the bottom left, you will see `Cookies`, click on it and select the cookie that starts with `https://osm-internal.download.geofabrik.de`.\n",
     "6. You will see a Name/Value pair displayed, with the name reading `gf_download_oauth`. Select this cookie\n",
     "7. On the right-hand side you will see a `Data` option, which gives the full cookie contents. You can right-click on this and select `Copy`.\n",
     "\n",
